--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="header">
+        <h1 class="title">TIC-TAC-TOE</h1>
+    </div>
+    <div class="gameField">
+        <div class="startDiv">
+            <label class="firstP">Enter first player's name<input type="text"></label>
+            <label class="secondP">Enter second player's name<input type="text"></label>
+            <button class="startBtn">START</button>
+        </div>
+        <!-- <div class="board"></div> -->
+    </div>
+    <div class="footer">OdinProject/Re1d555</div>
+
+
     <script src="script.js"></script>
 </body>
 </html>
