Done minor interface with few bugs

--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
     </div>
     <div class="gameField">
         <div class="startDiv">
-            <label class="firstP">Enter first player's name<input type="text"></label>
-            <label class="secondP">Enter second player's name<input type="text"></label>
+            <label class="firstP">Enter first player's name<input class="firstNameInput" type="text"></label>
+            <label class="secondP">Enter second player's name<input class="secondNameInput" type="text"></label>
             <button class="startBtn">START</button>
         </div>
-        <!-- <div class="board"></div> -->
     </div>
     <div class="footer">OdinProject/Re1d555</div>
 
