Add a few new bugs

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </div>
     <div class="gameField">
         <div class="startDiv">
-            <label class="firstP">Enter first player's name<input class="firstNameInput" type="text"></label>
-            <label class="secondP">Enter second player's name<input class="secondNameInput" type="text"></label>
+            <label class="firstP">Enter first player name<input class="firstNameInput" type="text"></label>
+            <label class="secondP">Enter second player name<input class="secondNameInput" type="text"></label>
             <button class="startBtn">START</button>
         </div>
     </div>
