--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <div class="header">
         <h1 class="title">TIC-TAC-TOE</h1>
     </div>
-    <div class="gameField">
+    <!-- <div class="gameField"> -->
         <div class="startDiv">
             <label class="firstP">Enter first player name<input class="firstNameInput" type="text"></label>
             <label class="secondP">Enter second player name<input class="secondNameInput" type="text"></label>
             <button class="startBtn">START</button>
         </div>
-    </div>
+        <div class="game">123</div>
+    <!-- </div> -->
     <div class="footer">OdinProject/Re1d555</div>
 
 
