Fix bugs, add dialog, start styling

--- a/index.html
+++ b/index.html
@@ -7,17 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <h1 class="title">TIC-TAC-TOE</h1>
-    </div>
-    <!-- <div class="gameField"> -->
+    <div class="header">TIC_TAC_TOE</div>
         <div class="startDiv">
-            <label class="firstP">Enter first player name<input class="firstNameInput" type="text"></label>
-            <label class="secondP">Enter second player name<input class="secondNameInput" type="text"></label>
+            <label class="firstP">Enter first player name<input class="firstNameInput" type="text" placeholder="Den"></label>
+            <label class="secondP">Enter second player name<input class="secondNameInput" type="text" placeholder="Jen"></label>
             <button class="startBtn">START</button>
         </div>
         <div class="game">123</div>
-    <!-- </div> -->
     <div class="footer">OdinProject/Re1d555</div>
 
 
