Add some real style

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">TIC_TAC_TOE</div>
-        <div class="startDiv">
-            <label class="firstP">Enter first player name<input class="firstNameInput" type="text" placeholder="Den"></label>
-            <label class="secondP">Enter second player name<input class="secondNameInput" type="text" placeholder="Jen"></label>
-            <button class="startBtn">START</button>
+    <div class="logo"><div class="header">TIC_TAC_TOE</div></div>
+    <div class="startDiv">
+        <div class="editDivs">
+            <label class="firstP">First player name:</label><input class="firstNameInput" type="text" placeholder="Den">
+            <label class="secondP">Second player name:</label><input class="secondNameInput" type="text" placeholder="Jen">
         </div>
+        <button class="startBtn gameButton">START</button>
+    </div>
         <div class="game">123</div>
     <div class="footer">OdinProject/Re1d555</div>
 
