--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
     <div class="logo"><div class="header">TIC_TAC_TOE</div></div>
     <div class="startDiv">
-        <div class="editDivs">
-            <label class="firstP">First player name:</label><input class="firstNameInput" type="text" placeholder="Den">
-            <label class="secondP">Second player name:</label><input class="secondNameInput" type="text" placeholder="Jen">
+         <div class="editDivs">
+            <label class="firstP">First player name:</label><input class="firstNameInput" type="text" required>
+            <label class="secondP">Second player name:</label><input class="secondNameInput" type="text" required>
         </div>
-        <button class="startBtn gameButton">START</button>
+        <input type="submit" value="Start" class="startBtn gameButton">
     </div>
+        <div class="gameUi"></div>
         <div class="game">123</div>
     <div class="footer">OdinProject/Re1d555</div>
 
